# picrunch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  backends.h  pi.cu  pi_cpu.cpp  pi_opencl.cpp
